// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonBar with center justify 1`] = `
<div
  className="ui-button-bar buttonBar normal"
>
  <div
    className="ui-button-bar-group buttonBarGroup center"
  />
</div>
`;

exports[`Test creation of a ButtonBar with left justify 1`] = `
<div
  className="ui-button-bar buttonBar normal"
>
  <div
    className="ui-button-bar-group buttonBarGroup left"
  />
</div>
`;

exports[`Test creation of a ButtonBar with right justify 1`] = `
<div
  className="ui-button-bar buttonBar normal"
>
  <div
    className="ui-button-bar-group buttonBarGroup right"
  />
</div>
`;

exports[`Test creation of a simple ButtonBar instance 1`] = `
<ButtonBar
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  buttonSize="32px"
  className="test-class"
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  justify={0}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  visible={true}
  width=""
>
  <div
    className="ui-button-bar buttonBar normal test-class"
  >
    <div
      className="ui-button-bar-group buttonBarGroup left"
    >
      <div
        className="buttonBarBox"
        key="c18a5741-d1bc-44e9-9293-9803c902f9c2"
        style={
          Object {
            "height": "32px",
            "width": "32px",
          }
        }
      >
        <Button
          backgroundColor="inherit"
          borderColor="inherit"
          borderWidth="none"
          className=""
          color="inherit"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          iconStyle=""
          id=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          visible={true}
          width=""
        >
          <div
            className="ui-button button ripple normal"
            onClick={[Function]}
            style={Object {}}
          >
            <Icon
              backgroundColor="inherit"
              borderColor="inherit"
              borderWidth="none"
              className="icon"
              color="inherit"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              visible={true}
              width=""
            >
              <i
                className="ui-icon icon none fa fa-fw fa-bomb normal"
                style={Object {}}
              />
            </Icon>
          </div>
        </Button>
      </div>
      <div
        className="buttonBarBox"
        key="b39d848d-0959-488b-8b4b-b12749baa685"
        style={
          Object {
            "height": "32px",
            "width": "32px",
          }
        }
      >
        <Button
          backgroundColor="inherit"
          borderColor="inherit"
          borderWidth="none"
          className=""
          color="inherit"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          iconStyle=""
          id=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          visible={true}
          width=""
        >
          <div
            className="ui-button button ripple normal"
            onClick={[Function]}
            style={Object {}}
          >
            <Icon
              backgroundColor="inherit"
              borderColor="inherit"
              borderWidth="none"
              className="icon"
              color="inherit"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              visible={true}
              width=""
            >
              <i
                className="ui-icon icon none fa fa-fw fa-bomb normal"
                style={Object {}}
              />
            </Icon>
          </div>
        </Button>
      </div>
    </div>
  </div>
</ButtonBar>
`;

exports[`Test disabling of the ButtonBar control 1`] = `
<ButtonBar
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  buttonSize="24px"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  justify={0}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  visible={true}
  width=""
>
  <div
    className="ui-button-bar buttonBar normal disabled nohover"
  >
    <div
      className="ui-button-bar-group buttonBarGroup left"
    >
      <div
        className="buttonBarBox"
        key="80d43410-0a3e-4e86-9845-4495ecae1086"
        style={
          Object {
            "height": "24px",
            "width": "24px",
          }
        }
      >
        <Button
          backgroundColor="inherit"
          borderColor="inherit"
          borderWidth="none"
          className=""
          color="inherit"
          contentEditable={false}
          direction="right"
          disabled={true}
          focus={false}
          height=""
          iconName="bomb"
          iconStyle=""
          id=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          visible={true}
          width=""
        >
          <div
            className="ui-button button normal disabled nohover"
            onClick={[Function]}
            style={Object {}}
          >
            <Icon
              backgroundColor="inherit"
              borderColor="inherit"
              borderWidth="none"
              className="icon"
              color="inherit"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              visible={true}
              width=""
            >
              <i
                className="ui-icon icon none fa fa-fw fa-bomb normal"
                style={Object {}}
              />
            </Icon>
          </div>
        </Button>
      </div>
      <div
        className="buttonBarBox"
        key="8eca56c4-fe14-462c-8736-d65ffc88655d"
        style={
          Object {
            "height": "24px",
            "width": "24px",
          }
        }
      >
        <Button
          backgroundColor="inherit"
          borderColor="inherit"
          borderWidth="none"
          className=""
          color="inherit"
          contentEditable={false}
          direction="right"
          disabled={true}
          focus={false}
          height=""
          iconName="bomb"
          iconStyle=""
          id=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          visible={true}
          width=""
        >
          <div
            className="ui-button button normal disabled nohover"
            onClick={[Function]}
            style={Object {}}
          >
            <Icon
              backgroundColor="inherit"
              borderColor="inherit"
              borderWidth="none"
              className="icon"
              color="inherit"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              visible={true}
              width=""
            >
              <i
                className="ui-icon icon none fa fa-fw fa-bomb normal"
                style={Object {}}
              />
            </Icon>
          </div>
        </Button>
      </div>
    </div>
  </div>
</ButtonBar>
`;

exports[`Test making the ButtonBar invisible 1`] = `
<ButtonBar
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  buttonSize="24px"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  justify={0}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  visible={false}
  width=""
>
  <div
    className="ui-button-bar buttonBar normal invisible"
  >
    <div
      className="ui-button-bar-group buttonBarGroup left"
    />
  </div>
</ButtonBar>
`;

exports[`Test retrieval of ButtonBar props object 1`] = `
Object {
  "backgroundColor": "inherit",
  "borderColor": "inherit",
  "borderWidth": "none",
  "buttonSize": "24px",
  "className": "",
  "color": "inherit",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "justify": 0,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "visible": true,
  "width": "",
}
`;
